site.css
/* ... */
#header label {
	font-weight:normal !important;
	font-color:red !important;
}

/* show notes in item details in the standard font color */
.Note  li {
	color: #244857;
}

/* how to show the item availability information */
ul.options h3 {
	font-size: 1.1em;
	padding-top:0px;
}

/* put the breadcrumbs straight after the header, and before search. */
#page #breadCrumb {
	ddfdisplay: inline;
	left: 10px;
	position: absolute;
	top: 207px;
}
#breadCrumb span {
	font-size: 0.8em;
}

/* unused */
#searchBoxx {
	display: inline;
	left: 240px;
	position: absolute;
	top: 220px;
}	

/* put the search box in the empty gap left by the breadcrumbes (which, being moved 
upwards using a relative posistion will leave a blnk space where they originally were) */
#searchBox {
	margin-top: 18px;
}

.branches {
	display: none;
}

#page input.save:hover {
	text-decoration: underline;
}

